--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -29,6 +29,85 @@ layout: default
   </div>
 </div>
 
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
+                  <h2 class="l-prg__card-title">Dostupnost zdravotnického materiálu</h2>
+                  <p>Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání.</p>
+                  <p>Zveřejnit jasný harmonogram, pravidla a způsob distribuce OOP včetně doplňování.</p>
+                  <h2>Podpořit kapacity výroby OOP v ČR, pokud je to možné.</h2>
+                  <p>Pokud je reálným cílem zajistit roušky “všem občanům”, kvůli snižování možnosti šíření viru je třeba zveřejnit plánovaný distribuční model</p>
+                  <h2 class="l-prg__card-title">Léky v lékárnách a nemocnicích</h2>
+                  <p>Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.</p>
+                  <p>Zmapovat, jaké léky bude stát potřebovat pro léčbu osob s koronavirem - dodat analýzu jejich množství a dostupnosti.</p>
+                  <p>Zajistit analýzu rizik dlouhodobého nedostatku vybraných léčiv z důvodu možných výpadků výrobních kapacit v Číně a Indii, a to i pro další typy léčiv - tyto léky je zapotřebí shánět dnes.</p>
+                </div>
+              </div>
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
+
+<hr/>
+
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-10 text-left pull-right">
+                <h2 class="l-prg__card-title">Zdravotnictví</h2>
+                <p>Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání. Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.</p>
+                <h5 class="l-prg__garant-name">Ing. Petr Třešňák <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="https://www.pirati.cz/assets/img/people/petr-tresnak.jpg" alt="Ing. Petr Třešňák"/>
+                </div></h5>
+                </div>
+
+                <div class="l-prg__stats columns medium-2">
+                  <div class="l-prg__stats-done">
+                    <svg width="100%" height="150px" viewBox="0 0 42 42" class="f-donut">
+                    <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+                    <path transform="translate(12,11) scale(.75)" d="M12.01 20c-5.065 0-9.586-4.211-12.01-8.424 2.418-4.103 6.943-7.576 12.01-7.576 5.135 0 9.635 3.453 11.999 7.564-2.241 4.43-6.726 8.436-11.999 8.436zm-10.842-8.416c.843 1.331 5.018 7.416 10.842 7.416 6.305 0 10.112-6.103 10.851-7.405-.772-1.198-4.606-6.595-10.851-6.595-6.116 0-10.025 5.355-10.842 6.584zm10.832-4.584c2.76 0 5 2.24 5 5s-2.24 5-5 5-5-2.24-5-5 2.24-5 5-5zm0 1c2.208 0 4 1.792 4 4s-1.792 4-4 4-4-1.792-4-4 1.792-4 4-4z"/>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="columns medium-6">
+                  <h3>Základní body:</h3>
+
+                  <table>
+                    <thead>
+                      <tr><th>Název</th></tr>
+                    </thead>
+                    <tbody>
+                      <tr><td>Předvídatelnost a jistota vládních kroků - milníky dalšího postupu</td></tr>
+                      <tr><td>Nezapomenout na nejohroženější skupiny</td></tr>
+                      <tr><td>Odpustit OSVČ bez příjmů povinné odvody</td></tr>
+                      <tr><td>Prodloužit ošetřovné a rozšířit ho i na OSVČ</td></tr>
+                      <tr><td>Podpořit kurzarbeit – zvýšit podíl státu na mzdových nákladech a zjednodušit byrokracii </td></tr>
+                      <tr><td>Odlehčit zaměstnavatelům v zasažených odvětvích odpuštěním sociálních a daňových odvodů z práce za zaměstnance</td></tr>
+                      <tr><td>Poskytovat bezúročné půjčky i v menším objemu, než 500 000 Kč</td></tr>
+                      <tr><td>Nemocenskou za lidi v karanténě musí hradit stát ze 100% i nad rámec programu antivirus</td></tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <div class="columns medium-6">
                 <h3>Články k tématu:</h3>
 
                   {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","zdravotnictví"  %}
@@ -38,27 +117,13 @@ layout: default
                     <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
                   {% endfor %}
                   </ul>
+                </div>
+              </div>
 
-Zdravotnictví
-kontrola - Josef P.
-
-Základní body:
-
-zajistit dostupnost zdravotnického materiálu a ochranných pomůcek
-nastavit jasný a transparentní harmonogram distribuce
-využít kapacity domácích výrobců
-zajistit / ověřit dostupnost léků v lékárnách a v nemocnicích
-realizace pandemického plánu
-ocenit zdravotní personál (správné proplácení přesčasů, dostatečný čas na regeneraci)
-
-Nová stránka po rozkliknutí:
-
-Dostupnost zdravotnického materiálu
-Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání.
-Zveřejnit jasný harmonogram, pravidla a způsob distribuce OOP včetně doplňování.
-Podpořit kapacity výroby OOP v ČR, pokud je to možné.
-Pokud je reálným cílem zajistit roušky “všem občanům”, kvůli snižování možnosti šíření viru je třeba zveřejnit plánovaný distribuční model
-Léky v lékárnách a nemocnicích
-Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.
-Zmapovat, jaké léky bude stát potřebovat pro léčbu osob s koronavirem - dodat analýzu jejich množství a dostupnosti.
-Zajistit analýzu rizik dlouhodobého nedostatku vybraných léčiv z důvodu možných výpadků výrobních kapacit v Číně a Indii, a to i pro další typy léčiv - tyto léky je zapotřebí shánět dnes.
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
