--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -240,7 +240,7 @@ layout: default
               </div>
 
               <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="zdravotnictvi.html" target="_blank" rel="noopener">Zobrazit naše řešení pro zdravotnictví</a>
+                  <a class="pce-hero__cta-item button large" href="zdravotnictvi.html">Zobrazit naše řešení pro zdravotnictví</a>
               </div>              
             </article>         
           </div>
@@ -314,7 +314,7 @@ layout: default
               </div>
 
               <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="ekonomika.html" target="_blank" rel="noopener">Zobrazit naše řešení pro ekonomiku a finance</a>
+                  <a class="pce-hero__cta-item button large" href="ekonomika.html">Zobrazit naše řešení pro ekonomiku a finance</a>
               </div>              
             </article>
           </div>
@@ -388,7 +388,7 @@ layout: default
               </div>
 
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="exekuce.html" target="_blank" rel="noopener">Zobrazit naše řešení exekucí</a>
+                  <a class="pce-hero__cta-item button large" href="exekuce.html">Zobrazit naše řešení exekucí</a>
               </div>              
             </article>
           </div>
@@ -466,7 +466,7 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
               </div>
 
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="socialni-dopady.html" target="_blank" rel="noopener">Zobrazit naše řešení sociálních dopadů</a>
+                  <a class="pce-hero__cta-item button large" href="socialni-dopady.html">Zobrazit naše řešení sociálních dopadů</a>
               </div>              
             </article>
           </div>
@@ -540,7 +540,7 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
               </div>              
 
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="skolstvi.html" target="_blank" rel="noopener">Zobrazit naše řešení školství</a>
+                  <a class="pce-hero__cta-item button large" href="skolstvi.html">Zobrazit naše řešení školství</a>
               </div>              
             </article>
           </div>
