--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -120,7 +120,7 @@ layout: default
               </div>
 
               <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="uvodni.html" target="_blank" rel="noopener">Zpět</a>
+                  <a class="pce-hero__cta-item button large" href="uvodni.html">Zpět</a>
               </div>
             </article>         
           </div>
