--- a/test/socialni-dopady.html
+++ b/test/socialni-dopady.html
@@ -28,38 +28,17 @@ layout: default
   </div>
 </div>
 
-                <h3>Články k tématu:</h3>
-
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","sociální dopady"  %}
-
-                  <ul>
-                  {% for post in sorted-posts limit: 10 %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
-                  {% endfor %}
-                  </ul>
-
-Sociální dopady
-Upraví - Zuza F.
-
-Základní body:
-Žádosti o podporu a dávky elektronicky, bez elektronického podpisu.
-Změnit možnosti využití dávky mimořádné okamžité pomoci i pro fyzické osoby s náhlým propadem příjmů (s dokládáním za aktuální měsíc).
-Definovat postup pro lidi bez domova v karanténě.
-Umožnit krátkodobé převedení zaměstnanců sociálních služeb dle aktuálních potřeb.
-Podpora pro lidi pracující na DPČ a DPP.
-Podpora pro lidi s hendikepem, kterým se zhoršila dostupnost asistenčních a dalších služeb.
-Podpora pro lidi s nízkými invalidními důchody.
-Podpora pro OBZP.
-Nastavit pravidla pro fungování nocleháren, azylových domů apod.
-Opatření na podporu dětí, jejichž rodiče byli hospitalizováni. ?
-Podpora pro lidi s PAS, duševním onemocněním, závislostmi. ?
-
-
-Po rozkliknutí: 
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
+                  <h2 class="l-prg__card-title">Ošetřovné</h2>
  
-Řešení sociálních dopadů
- 
-Ošetřovné 
 Souhlasíme s navrženým prodloužením ošetřovného. Zákonné změny jsme podpořili. 
 
 V rámci projednávání ošetřovného na schůzi Sněmovny 24.3.2020 Piráti podali pět pozměňovacích návrhů, na měsíční výplatu ošetřovného (vláda nakonec řeší metodickým pokynem), příspěvek pro osoby na DPČ a DPP (nebylo schváleno), možnost střídání rodičů více než jednou (schváleno), navýšení věkového limitu pro osoby s postižením (podávalo více stran, schváleno), ošetřovné pro OSVČ. 
@@ -119,3 +98,90 @@ Mezi uzavřenými provozovnami jsou i terapeutické a psychologické ambulance. 
 Změna je účinná od 1.4.2020, což znamená více žadatelů a nové žádosti o příspěvek na živobytí, přídavek na dítě nebo o dávky pro osoby se zdravotním postižením. Dokládá se řada dokumentů, například doklady o zaplacení nájemného, potvrzení od zaměstnavatele o příjmech a další, a přitom tito lidé většinou nemají mail a něco naskenovat není možné. Vhodný by byl stejný postup jako u stávajících klientů, tj.“důkazní břemeno” měl plně převzít ÚP tam, kde je to možné (doklady o přiznaných nepojistných dávkách má k dispozici, doklad o příjmu ze zaměstnání nebo o dávkách pojistných si může vyžádat od zaměstnavatelů nebo od ČSSZ). Tyto dávky jsou navíc u většiny žadatelů hlavní příjem. Pokud bude možné změny oznamovat písemně nebo mailem - např. ukončení studia, změnu trvalého pobytu, změnu účtu, na který se peníze posílají, ukončení nájemní smlouvy atd., velmi to pomůže. Přídavek na dítě a příspěvek na bydlení je vyplácen měsíc zpětně, to znamená, že ještě v dubnu bude vyplacen podle předešlého. Tak zde se jedná o dávku až od května. Tam vše záleží na vývoji situace. Dávky se dají vyplácet až 3 měsíce zpětně.
 V každém případě je nutné u změnových i nových případů rozšiřovat možnosti dálkového podávání.
 Lze uvažovat i o úplném uzavření poboček pro fyzickém návštěvy a testování kombinace email (bez elektronického podpisu) - telefon - schránka z vnějšku budov ÚP.
+
+                </div>
+              </div>
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
+
+<hr/>
+
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">       
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-10 text-left pull-right">
+                <p>Souhlasíme s navrženým prodloužením ošetřovného. Zákonné změny jsme podpořili. 
+Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde jen o drobné přivýdělky. Tento typ smluv supluje v našem pracovněprávním systému zejména pracovní poměr na částečné úvazky. Jde například o učitele, asistenty pedagogů nebo studenty, kteří si přivydělávají během studia (platí z něj ubytování nebo kolejné a nyní jim hrozí ztráta bydlení), ale i třeba zaměstnance státního podniku Česká pošta.</p>
+                <h5 class="l-prg__garant-name">PhDr. Olga Richterová, PhD. <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="https://www.pirati.cz/assets/img/people/olga-richterova.jpg" alt="PhDr. Olga Richterová, PhD."/>
+                </div></h5>
+                </div>
+
+                <div class="l-prg__stats columns medium-2">
+                  <div class="l-prg__stats-done">
+                    <svg width="100%" height="150px" viewBox="0 0 42 42" class="f-donut">
+                    <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+                    <path transform="translate(12,11) scale(.75)" d="M18 24h-12c-1.104 0-2-.896-2-2v-20c0-1.104.896-2 2-2h12c1.104 0 2 .896 2 2v20c0 1.104-.896 2-2 2zm1-5.083h-14v3.083c0 .552.449 1 1 1h12c.552 0 1-.448 1-1v-3.083zm-7 3c-.553 0-1-.448-1-1s.447-1 1-1c.552 0 .999.448.999 1s-.447 1-.999 1zm7-17h-14v13h14v-13zm-1-3.917h-12c-.551 0-1 .449-1 1v1.917h14v-1.917c0-.551-.448-1-1-1zm-4.5 1.917h-3c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h3c.276 0 .5.224.5.5s-.224.5-.5.5z"/>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="columns medium-6">
+                  <h3>Základní body:</h3>
+
+                  <table>
+                    <thead>
+                      <tr><th>Název</th></tr>
+                    </thead>
+                    <tbody>
+                    <tr><td>Žádosti o podporu a dávky elektronicky, bez elektronického podpisu</td></tr>
+                    <tr><td>Změnit možnosti využití dávky mimořádné okamžité pomoci i pro fyzické osoby s náhlým propadem příjmů (s dokládáním za aktuální měsíc)</td></tr>
+                    <tr><td>Definovat postup pro lidi bez domova v karanténě</td></tr>
+                    <tr><td>Umožnit krátkodobé převedení zaměstnanců sociálních služeb dle aktuálních potřeb</td></tr>
+                    <tr><td>Podpora pro lidi pracující na DPČ a DPP</td></tr>
+                    <tr><td>Podpora pro lidi s hendikepem, kterým se zhoršila dostupnost asistenčních a dalších služeb.</td></tr>
+                    <tr><td>Podpora pro lidi s nízkými invalidními důchody</td></tr>
+                    <tr><td>Podpora pro OBZP</td></tr>
+                    <tr><td>Nastavit pravidla pro fungování nocleháren, azylových domů apod</td></tr>
+                    <tr><td>Opatření na podporu dětí, jejichž rodiče byli hospitalizováni.</td></tr>
+                    <tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi.</td></tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <div class="columns medium-6">
+                <h3>Články k tématu:</h3>
+
+                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","sociální dopady"  %}
+
+                  <ul>
+                  {% for post in sorted-posts limit: 10 %}
+                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
+                  {% endfor %}
+                  </ul>
+                </div>
+              </div>
+
+              <div class="medium-12 pce-hero__cta">
+                  <a class="pce-hero__cta-item button large" href="uvodni.html">Zpět</a>
+              </div>
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
