--- a/test/socialni-dopady.html
+++ b/test/socialni-dopady.html
@@ -59,7 +59,7 @@ DPČ a DPP</p>
 <p>Navrhli jsme proto pokračovat ve výplatách tak, jak je podáno v I. kvartále - tedy prodloužit pobírání těchto dávek o další období, to je v případě přídavku na dítě a příspěvku na bydlení 3 měsíce a příspěvku na živobytí a Doplatku na bydlení 1 měsíc bez nutnosti návštěvy ÚP. A již podané žádosti vyřídit dodatečně. Je na druhou stranu zřejmé, že hrozí přeplatky na dávce a zadlužení přednostní pohledávkou vůči státu, čili že neexistuje snadné řešení.</p>
 <p>Návrh zákonné úpravy posílá nyní vláda do Sněmovny!</p>
 
-                  <h2 class="l-prg__card-title">Mimořádná okamžitá pomoc
+                  <h2 class="l-prg__card-title">Mimořádná okamžitá pomoc</h2>
 <p>Navrhujeme změnit možnosti využití dávky mimořádné okamžité pomoci (především jako prevence ztráty bydlení), aby mohla sloužit i fyzickým osobám s náhlým propadem příjmů tam, kde by nebylo možné dosáhnout na jiné dávky:</p>
 <p>Vydat pokyn k dávce “mimořádná okamžitá pomoc” (MOP), aby byl prověřován pokles příjmů v aktuálním měsíci. Prakticky jde u MOP o aplikaci paragrafu 2 odst. 4 zákona č. 111/2006 Sb., o pomoci v hmotné nouzi, který se má vztahovat na vážné mimořádné události. V případě takové situace by ÚP měly posuzovat jen aktuální měsíc. Pokles příjmů bude znatelný už v dubnu. Ještě citelnější bude nejspíš v květnu. Co se týče prověřování úspor a prokazatelných životních nákladů, předpokládáme, že budou platit stávající podmínky, takže dávka naplní svůj účel a bude zacílena velmi adresně.</p>
 
