--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -338,9 +338,9 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Dluhy, exekuce, insolvence</h2>
-                <p>Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady práce, které v této chvíli nestíhají vyplácet příspěvky. Nadále upozorňujeme, že v regionech se silnou koncentrací dlužníků může dojít vlivem zhroucení černého pracovního trhu k masivním sociálním problémům, které mohou přerůst až v občanské nepokoje a rabování. Vládě České republiky doporučujeme, aby si pro tyto krizové případy přichystala plán a zároveň doporučujeme několik opatření, které by mohly eskalaci situace předejít.
-                </p>
-                <h5 class="l-prg__garant-name">Lukáš Kolářík <div class="l-kan__item-img l-prg__garant-img">
+                <p><em>„V České republice je skoro 900 tisíc lidí v exekuci. Problém přitom nezatěžuje jen povinné (dlužníky) a jejich nejbližší rodinné okolí, ale i celou ekonomiku a všechny dotčené instituce. Současná praxe omezuje vymahatelnost práva; nároky věřitelů často zůstávají neuspokojeny, dotčené instituce jsou zahlceny administrativou a narušován je i základní ústavní požadavek na nestrannost exekutora a spravedlivý proces.</em></p>
+                <p><em>Piráti pokládají téma exekucí za jednu ze svých klíčových agend, kterým se aktivně věnují, a nejinak tomu bude i v budoucnu. Navrhujeme sjednocení všech pohledávek pod jednoho exekutora, a to podle místa pobytu povinného. Toto opatření sníží náklady, zlepší komunikaci mezi exekutorem a povinným, zvýší vymahatelnost práva a rozbije klientelistické vazby mezi velkými obchodníky s pohledávkami a exekutory.“</em></p>
+                <h5 class="l-prg__garant-name">Lukáš Kolářík, poslanec Parlamentu České republiky <div class="l-kan__item-img l-prg__garant-img">
                   <img src="https://www.pirati.cz/assets/img/people/lukas-kolarik.jpg" alt="Lukáš Kolářík"/>
                 </div></h5>
                 </div>
