--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -413,9 +413,8 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Sociální dopady</h2>
-                <p>Souhlasíme s navrženým prodloužením ošetřovného. Zákonné změny jsme podpořili. 
-Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde jen o drobné přivýdělky. Tento typ smluv supluje v našem pracovněprávním systému zejména pracovní poměr na částečné úvazky. Jde například o učitele, asistenty pedagogů nebo studenty, kteří si přivydělávají během studia (platí z něj ubytování nebo kolejné a nyní jim hrozí ztráta bydlení), ale i třeba zaměstnance státního podniku Česká pošta.</p>
-                <h5 class="l-prg__garant-name">PhDr. Olga Richterová, PhD. <div class="l-kan__item-img l-prg__garant-img">
+                <p><em>Otevřenost je nejlepším lékem. Moderní technologie nám daly jedinečnou možnost státní hospodaření zprůhlednit a vracet význam spojení„veřejná služba“. Piráti se snaží být transparentní organizace a vracet do veřejného života důvěru.</em></p>
+                <h5 class="l-prg__garant-name">PhDr. Olga Richterová, PhD., poslankyně Parlamentu České republiky <div class="l-kan__item-img l-prg__garant-img">
                   <img src="https://www.pirati.cz/assets/img/people/olga-richterova.jpg" alt="PhDr. Olga Richterová, PhD."/>
                 </div></h5>
                 </div>
