--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -264,7 +264,7 @@ layout: default
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Ekonomika a finance</h2>
                 <p>Současná situace má již teď znatelné dopady na ekonomiku ČR , a to jak na firmy tak jednotlivce. Lze předpokládat nutnost masivních investic do ekonomiky ze strany státu. V tuto chvíli je však namístě řešit především úlevy na straně firem a soukromníků.</p>
-                <h5 class="l-prg__garant-name">Mikuláš Ferjenčík <div class="l-kan__item-img l-prg__garant-img">
+                <h5 class="l-prg__garant-name">Mikuláš Ferjenčík, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
                   <img src="https://www.pirati.cz/assets/img/people/mikulas-ferjencik.jpg" alt="Mikuláš Ferjenčík"/>
                 </div></h5>
                 </div>
@@ -492,7 +492,7 @@ layout: default
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Školství</h2>
                 <p>Připravili jsme pozměňovací návrhy k zákonům předkládaným MŠMT ve zrychleném režimu. Chceme usnadnit elektronizaci zápisů do škol. Prosazovali jsme možnost druhého termínu u přijímacích zkoušek na SŠ a odvolání žáků vůči rozhodnutí o ne/přijetí.</p>
-                <h5 class="l-prg__garant-name">Ing. Lukáš Bartoň, Ph.D. <div class="l-kan__item-img l-prg__garant-img">
+                <h5 class="l-prg__garant-name">Ing. Lukáš Bartoň, Ph.D., poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
                   <img src="https://www.pirati.cz/assets/img/people/lukas-barton.jpg" alt="Ing. Lukáš Bartoň, Ph.D."/>
                 </div></h5>
                 </div>
