--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -189,7 +189,7 @@ layout: default
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Zdravotnictví</h2>
                 <p>Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání. Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.</p>
-                <h5 class="l-prg__garant-name">Ing. Petr Třešňák <div class="l-kan__item-img l-prg__garant-img">
+                <h5 class="l-prg__garant-name">Ing. Petr Třešňák, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
                   <img src="https://www.pirati.cz/assets/img/people/petr-tresnak.jpg" alt="Ing. Petr Třešňák"/>
                 </div></h5>
                 </div>
