--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -95,7 +95,7 @@ layout: default
   <div class="small-12 medium-2 columns end">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <a href="skolstvi.html"><img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" /></a>
+        <a href="skolstvi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>
       </div>
       <h3><a href="skolstvi.html">Školství</a></h3>
     </div>
@@ -491,7 +491,7 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Školství</h2>
-                <p>Připravili jsme pozměňovací návrhy k zákonům předkládaným MŠMT ve zrychleném režimu. Chceme usnadnit elektronizaci zápisů do škol. Prosazovali jsme možnost druhého termínu u přijímacích zkoušek na SŠ a odvolání žáků vůči rozhodnutí o ne/přijetí.</p>
+                <p><em>Žijeme v digitálně propojené společnosti, ve které hrají klíčovou roli znalosti, informace a jejich využívání. Ruku v ruce s technologickým pokrokem dochází ke změnám v tom, které dovednosti a znalosti jsou a budou pro život ve společnosti potřebné.</em></p>
                 <h5 class="l-prg__garant-name">Ing. Lukáš Bartoň, Ph.D., poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
                   <img src="https://www.pirati.cz/assets/img/people/lukas-barton.jpg" alt="Ing. Lukáš Bartoň, Ph.D."/>
                 </div></h5>
@@ -499,7 +499,7 @@ layout: default
 
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
-                    <a href="skolstvi.html"><img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" /></a>
+                    <a href="skolstvi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>
                     <!--<svg width="100%" height="150px" viewBox="0 0 42 42" class="f-donut">
                     <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
                     <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
