--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -208,7 +208,7 @@ layout: default
 
               <div class="row">
                 <div class="columns medium-6">
-                  <h3>Základní body:</h3>
+                  <h3>Co prosazují Piráti:</h3>
 
                   <table>
                     <thead>
@@ -283,7 +283,7 @@ layout: default
 
               <div class="row">
                 <div class="columns medium-6">
-                  <h3>Základní body:</h3>
+                  <h3>Co prosazují Piráti:</h3>
 
                   <table>
                     <thead>
@@ -359,7 +359,7 @@ layout: default
 
               <div class="row">
                 <div class="columns medium-6">
-                  <h3>Základní body:</h3>
+                  <h3>Co prosazují Piráti:</h3>
 
                   <table>
                     <thead>
@@ -433,7 +433,7 @@ layout: default
 
               <div class="row">
                 <div class="columns medium-6">
-                  <h3>Základní body:</h3>
+                  <h3>Co prosazují Piráti:</h3>
 
                   <table>
                     <thead>
@@ -511,7 +511,7 @@ layout: default
 
               <div class="row">
                 <div class="columns medium-6">
-                  <h3>Základní body:</h3>
+                  <h3>Co prosazují Piráti:</h3>
 
                   <table>
                     <thead>
