--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -190,7 +190,7 @@ layout: default
                 <h2 class="l-prg__card-title">Zdravotnictví</h2>
                 <p>Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání. Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.</p>
                 <h5 class="l-prg__garant-name">Ing. Petr Třešňák, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
-                  <img src="https://www.pirati.cz/assets/img/people/petr-tresnak.jpg" alt="Ing. Petr Třešňák"/>
+                  <img src="/assets/img/peoples/tresnak-petr.png" alt="Ing. Petr Třešňák"/>
                 </div></h5>
                 </div>
 
@@ -265,7 +265,7 @@ layout: default
                 <h2 class="l-prg__card-title">Ekonomika a finance</h2>
                 <p>Současná situace má již teď znatelné dopady na ekonomiku ČR , a to jak na firmy tak jednotlivce. Lze předpokládat nutnost masivních investic do ekonomiky ze strany státu. V tuto chvíli je však namístě řešit především úlevy na straně firem a soukromníků.</p>
                 <h5 class="l-prg__garant-name">Mikuláš Ferjenčík, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
-                  <img src="https://www.pirati.cz/assets/img/people/mikulas-ferjencik.jpg" alt="Mikuláš Ferjenčík"/>
+                  <img src="/assets/img/peoples/ferjencik-mikulas.png" alt="Mikuláš Ferjenčík"/>
                 </div></h5>
                 </div>
 
@@ -341,7 +341,7 @@ layout: default
                 <p><em>„V České republice je skoro 900 tisíc lidí v exekuci. Problém přitom nezatěžuje jen povinné (dlužníky) a jejich nejbližší rodinné okolí, ale i celou ekonomiku a všechny dotčené instituce. Současná praxe omezuje vymahatelnost práva; nároky věřitelů často zůstávají neuspokojeny, dotčené instituce jsou zahlceny administrativou a narušován je i základní ústavní požadavek na nestrannost exekutora a spravedlivý proces.</em></p>
                 <p><em>Piráti pokládají téma exekucí za jednu ze svých klíčových agend, kterým se aktivně věnují, a nejinak tomu bude i v budoucnu. Navrhujeme sjednocení všech pohledávek pod jednoho exekutora, a to podle místa pobytu povinného. Toto opatření sníží náklady, zlepší komunikaci mezi exekutorem a povinným, zvýší vymahatelnost práva a rozbije klientelistické vazby mezi velkými obchodníky s pohledávkami a exekutory.“</em></p>
                 <h5 class="l-prg__garant-name">Lukáš Kolářík, poslanec Parlamentu České republiky <div class="l-kan__item-img l-prg__garant-img">
-                  <img src="https://www.pirati.cz/assets/img/people/lukas-kolarik.jpg" alt="Lukáš Kolářík"/>
+                  <img src="/assets/img/peoples/kolarik-lukas.png" alt="Lukáš Kolářík"/>
                 </div></h5>
                 </div>
 
@@ -415,7 +415,7 @@ layout: default
                 <h2 class="l-prg__card-title">Sociální dopady</h2>
                 <p><em>Otevřenost je nejlepším lékem. Moderní technologie nám daly jedinečnou možnost státní hospodaření zprůhlednit a vracet význam spojení„veřejná služba“. Piráti se snaží být transparentní organizace a vracet do veřejného života důvěru.</em></p>
                 <h5 class="l-prg__garant-name">PhDr. Olga Richterová, PhD., poslankyně Parlamentu České republiky <div class="l-kan__item-img l-prg__garant-img">
-                  <img src="https://www.pirati.cz/assets/img/people/olga-richterova.jpg" alt="PhDr. Olga Richterová, PhD."/>
+                  <img src="/assets/img/peoples/richterova-olga.png" alt="PhDr. Olga Richterová, PhD."/>
                 </div></h5>
                 </div>
 
@@ -493,7 +493,7 @@ layout: default
                 <h2 class="l-prg__card-title">Školství</h2>
                 <p><em>Žijeme v digitálně propojené společnosti, ve které hrají klíčovou roli znalosti, informace a jejich využívání. Ruku v ruce s technologickým pokrokem dochází ke změnám v tom, které dovednosti a znalosti jsou a budou pro život ve společnosti potřebné.</em></p>
                 <h5 class="l-prg__garant-name">Ing. Lukáš Bartoň, Ph.D., poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
-                  <img src="https://www.pirati.cz/assets/img/people/lukas-barton.jpg" alt="Ing. Lukáš Bartoň, Ph.D."/>
+                  <img src="/assets/img/peoples/barton-lukas.png" alt="Ing. Lukáš Bartoň, Ph.D."/>
                 </div></h5>
                 </div>
 
