--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -63,6 +63,12 @@ layout: default
   <div class="small-12 medium-2 medium-offset-1 columns">
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
+        <img src="/assets/img/peoples/tresnak-petr.png" alt="Ing. Petr Třešňák" style="
+max-width: 80px;
+display: inline-block;
+border-radius: 300px;
+overflow: hidden;
+margin-left: 1rem;"/>
         <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
       </div>
       <h3><a href="zdravotnictvi.html">Zdravotnictví</a></h3>
@@ -215,14 +221,12 @@ layout: default
                       <tr><th>Název</th></tr>
                     </thead>
                     <tbody>
-                      <tr><td>Předvídatelnost a jistota vládních kroků - milníky dalšího postupu</td></tr>
-                      <tr><td>Nezapomenout na nejohroženější skupiny</td></tr>
-                      <tr><td>Odpustit OSVČ bez příjmů povinné odvody</td></tr>
-                      <tr><td>Prodloužit ošetřovné a rozšířit ho i na OSVČ</td></tr>
-                      <tr><td>Podpořit kurzarbeit – zvýšit podíl státu na mzdových nákladech a zjednodušit byrokracii </td></tr>
-                      <tr><td>Odlehčit zaměstnavatelům v zasažených odvětvích odpuštěním sociálních a daňových odvodů z práce za zaměstnance</td></tr>
-                      <tr><td>Poskytovat bezúročné půjčky i v menším objemu, než 500 000 Kč</td></tr>
-                      <tr><td>Nemocenskou za lidi v karanténě musí hradit stát ze 100% i nad rámec programu antivirus</td></tr>
+                      <tr><td>zajistit dostupnost zdravotnického materiálu a ochranných pomůcek</td></tr>
+                      <tr><td>nastavit jasný a transparentní harmonogram distribuce</td></tr>
+                      <tr><td>využít kapacity domácích výrobců</td></tr>
+                      <tr><td>zajistit / ověřit dostupnost léků v lékárnách a v nemocnicích</td></tr>
+                      <tr><td>realizace pandemického plánu</td></tr>
+                      <tr><td>ocenit zdravotní personál (správné proplácení přesčasů, dostatečný čas na regeneraci)</td></tr>
                     </tbody>
                   </table>
                 </div>
@@ -263,7 +267,7 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Ekonomika a finance</h2>
-                <p>Současná situace má již teď znatelné dopady na ekonomiku ČR , a to jak na firmy tak jednotlivce. Lze předpokládat nutnost masivních investic do ekonomiky ze strany státu. V tuto chvíli je však namístě řešit především úlevy na straně firem a soukromníků.</p>
+                <p>Piráti usilují o co nejrychlejší efektivní pomoc všem postiženým skupinám obyvatel. Soustředíme se zejména na pomoc lidem, na které vláda zapomíná a na pomoc živnostníkům, za které nekopou žádné svazy asociace a jiné profesní organizace.</p>
                 <h5 class="l-prg__garant-name">Mikuláš Ferjenčík, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
                   <img src="/assets/img/peoples/ferjencik-mikulas.png" alt="Mikuláš Ferjenčík"/>
                 </div></h5>
@@ -294,7 +298,7 @@ layout: default
                       <tr><td>Nezapomenout na nejohroženější skupiny</td></tr>
                       <tr><td>Odpustit OSVČ bez příjmů povinné odvody</td></tr>
                       <tr><td>Prodloužit ošetřovné a rozšířit ho i na OSVČ</td></tr>
-                      <tr><td>Podpořit kurzarbeit – zvýšit podíl státu na mzdových nákladech a zjednodušit byrokracii </td></tr>
+                      <tr><td>Podpořit kurzarbeit – zvýšit podíl státu na mzdových nákladech a zjednodušit byrokracii</td></tr>
                       <tr><td>Odlehčit zaměstnavatelům v zasažených odvětvích odpuštěním sociálních a daňových odvodů z práce za zaměstnance</td></tr>
                       <tr><td>Poskytovat bezúročné půjčky i v menším objemu, než 500 000 Kč</td></tr>
                       <tr><td>Nemocenskou za lidi v karanténě musí hradit stát ze 100% i nad rámec programu antivirus</td></tr>
@@ -413,7 +417,7 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Sociální dopady</h2>
-                <p><em>Otevřenost je nejlepším lékem. Moderní technologie nám daly jedinečnou možnost státní hospodaření zprůhlednit a vracet význam spojení„veřejná služba“. Piráti se snaží být transparentní organizace a vracet do veřejného života důvěru.</em></p>
+                <p><em>Považujeme za zásadní, aby byla přijata taková opatření, která zajistí, že kvůli koronavirové krizi nepadne nikdo na úplné dno! Podle výzkumů až 40 % českých domácností nemá dostatečné úspory, aby si mohli pomoci sami. Ti všichni potřebují podporu. Jde o základní věci - jídlo pro děti, zaplacení nájmu. Lidé, kteří dosud regulérně pracovali, byť třeba na dohody, platili pojištění, musí být podpořeni.</em></p>
                 <h5 class="l-prg__garant-name">PhDr. Olga Richterová, PhD., poslankyně Parlamentu České republiky <div class="l-kan__item-img l-prg__garant-img">
                   <img src="/assets/img/peoples/richterova-olga.png" alt="PhDr. Olga Richterová, PhD."/>
                 </div></h5>
@@ -445,12 +449,12 @@ layout: default
                     <tr><td>Definovat postup pro lidi bez domova v karanténě</td></tr>
                     <tr><td>Umožnit krátkodobé převedení zaměstnanců sociálních služeb dle aktuálních potřeb</td></tr>
                     <tr><td>Podpora pro lidi pracující na DPČ a DPP</td></tr>
-                    <tr><td>Podpora pro lidi s hendikepem, kterým se zhoršila dostupnost asistenčních a dalších služeb.</td></tr>
+                    <tr><td>Podpora pro lidi s hendikepem, kterým se zhoršila dostupnost asistenčních a dalších služeb</td></tr>
                     <tr><td>Podpora pro lidi s nízkými invalidními důchody</td></tr>
                     <tr><td>Podpora pro OBZP</td></tr>
-                    <tr><td>Nastavit pravidla pro fungování nocleháren, azylových domů apod</td></tr>
-                    <tr><td>Opatření na podporu dětí, jejichž rodiče byli hospitalizováni.</td></tr>
-                    <tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi.</td></tr>
+                    <tr><td>Nastavit pravidla pro fungování nocleháren, azylových domů apod.</td></tr>
+                    <tr><td>Opatření na podporu dětí, jejichž rodiče byli hospitalizováni</td></tr>
+                    <tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi</td></tr>
                     </tbody>
                   </table>
                 </div>
@@ -491,7 +495,7 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Školství</h2>
-                <p><em>Žijeme v digitálně propojené společnosti, ve které hrají klíčovou roli znalosti, informace a jejich využívání. Ruku v ruce s technologickým pokrokem dochází ke změnám v tom, které dovednosti a znalosti jsou a budou pro život ve společnosti potřebné.</em></p>
+                <p><em>Přechod škol do režimu distančního vzdělávání nám ukázalo, jaký obrovský potenciál v ředitelích i učitelích máme. A jakou podporu dokáží vyvinout různé iniciativy, organizace a spolky, které školám v jejich nelehkém úkolu pomáhají. Tyto změny ale rovněž odhalily slabiny, které musíme řešit. Musíme více zaměřit své síly na podporu učitelů a udržování komunikace s rodiči a dětmi, zlepšit podmínky pro jejich přípravu. Musíme mít plán pro návrat dětí do škol.</em></p>
                 <h5 class="l-prg__garant-name">Ing. Lukáš Bartoň, Ph.D., poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
                   <img src="/assets/img/peoples/barton-lukas.png" alt="Ing. Lukáš Bartoň, Ph.D."/>
                 </div></h5>
@@ -518,14 +522,15 @@ layout: default
                       <tr><th>Název</th></tr>
                     </thead>
                     <tbody>
-                    <tr><td>Elektronické zápisy do škol</td></tr>
                     <tr><td>Zachování dvou termínů u přijímacích zkoušek na SŠ</td></tr>
-                    <tr><td>Zachování možnosti odvolání proti rozhodnutí ředitele</td></tr>
-                    <tr><td>Posun termínu maturit, ne jejich rušení - podpora absolventů, kteří míří na trh práce</td></tr>
-                    <tr><td>Výukové skupiny pro žáky se speciálními vzdělávacími potřebami (SVP)</td></tr>
-                    <tr><td>Vybavení rodin ICT</td></tr>
-                    <tr><td>Podmínky fungování VŠ v době krize</td></tr>
-                    <tr><td>Revize rozpočtů v oblasti školství</td></tr>
+                    <tr><td>Zachování možnosti odvolání žáka proti rozhodnutí ředitele o žádosti o přijetí na SŠ</td></tr>
+                    <tr><td>Možnost delšího odkladu maturity a závěrečných zkoušek v učebních oborech, nikoliv jejich rychlé rušení</td></tr>
+                    <tr><td>Výukové skupiny pro znevýhodněné žáky</td></tr>
+                    <tr><td>Výpůjčka ICT do sociálně a ekonomicky znevýhodněných rodin</td></tr>
+                    <tr><td>Úprava podmínek a průběhu přijímacích zkoušek na VŠ v době krize</td></tr>
+                    <tr><td>Revize a úprava rozpočtu v oblasti školství</td></tr>
+                    <tr><td>Kontrola smysluplnosti škrtů ve financích na vědu a výzkum</td></tr>
+                    <tr><td>Elektronické zápisy do škol</td></tr>
                     </tbody>
                   </table>
                 </div>
