--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -25,9 +25,11 @@ layout: default
 <div class="pce-hero pce-hero--entry">
   <div class="pce-hero__content">
     <h1 class="o-section__heading l-program__heading">Naše řešení pro zdravotnictví</h1>
-    <h2 class="t-h4-alt">Návrh Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>zdravotnictví</strong>:</h2>
+    <h2 class="t-h4-alt">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>zdravotnictví</strong>:</h2>
   </div>
 </div>
+
+<hr/>
 
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
