--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -68,9 +68,9 @@ layout: default
                 <div class="l-prg__content columns medium-12 text-left pull-right">
                   <h3 class="l-prg__card-title">Dostupnost zdravotnického materiálu</h3>
                   <p>Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání.</p>
-                  <!->Zveřejnit jasný harmonogram, pravidla a způsob distribuce OOP včetně doplňování.</->
-                  <!->Podpořit kapacity výroby OOP v ČR, pokud je to možné.</->
-                  <!->Pokud je reálným cílem zajistit roušky “všem občanům”, kvůli snižování možnosti šíření viru je třeba zveřejnit plánovaný distribuční model</->
+                  - Zveřejnit jasný harmonogram, pravidla a způsob distribuce OOP včetně doplňování.
+                  - Podpořit kapacity výroby OOP v ČR, pokud je to možné.
+                  - Pokud je reálným cílem zajistit roušky “všem občanům”, kvůli snižování možnosti šíření viru je třeba zveřejnit plánovaný distribuční model.
                   <h3 class="l-prg__card-title">Léky v lékárnách a nemocnicích</h3>
                   <p>Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.</p>
                   <!->Zmapovat, jaké léky bude stát potřebovat pro léčbu osob s koronavirem - dodat analýzu jejich množství a dostupnosti.</->
